css/style.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,300,400,700);

 a{
	 text-decoration:none;
	 color:white;
 }
 a:active{
	 text-decoration:none;
 }
 a:hover{
	 text-decoration:none;
 }
 a:link{
	 text-decoration:none;
 }
 a:visited{
	 text-decoration:none;
 }

 .about{
	 /*background-color:#d44343;*/
	 background-color:#dfdfdf;
	 display:inline-block;
	 width:48%;
	 padding-bottom:75px;
	 padding-top:65px;
	 padding-left:10px;
	 padding-right:10px;
	 float:left;
	 flex:1;
 }

 .board{
	 background-color:rgba(0,0,0,.25);
	 height:70vh;
	 width:70%;
	 position:absolute;
	 top:15vh;
	 left:15%;
	 right:15%;
	 z-index:4;
	 overflow-x:hidden;
	 overflow-y:hidden;
	 max-height:70vh;
 }
 
body {
	font-family: 'Averia Sans Libre', cursive;
	margin:0px;
	overflow-x:hidden;
	height:100%;
	background:#fffbe8;
}

#background{
	margin:0px;
	overflow-x:hidden;
	padding:0px;
	z-index:-2;
	height:100vh;
	overflow-y:hidden;
}

.back-to-top{
    background: none;
    margin: 0;
    padding: 0;
    position: fixed;
    bottom: 15px;
    right: 15px;
    width: 50px;
    height: 50px;
    z-index: 100;
    display: none;
    text-decoration: none;
    color: white;
    background-color: #efd139;
    border-radius: 70px;
}

.back-to-top:hover{
    color: #5d88ea;
}

.back-to-top i{
    font-size: 45px;
}

.colorBlue:hover{
	border-bottom: 5px solid #2694e2
}

.colorPurple:hover{
	border-bottom: 5px solid #7126e2;
}

.colorRed:hover{
	border-bottom: 5px solid #e24226;
}

.colorYellow:hover{
	border-bottom: 5px solid #27ba3d;
}

#footer{
    background-color:#5d88ea;
	height:30px;
	color:black;
    text-align: center;
}

#header{
	/*background-color:#5bc0be;*/
	/*background-color:rgba(91, 192, 190,0);*/
	background-color:rgba(255, 89, 0, 0);
	position:absolute;
	top:0px;
	left:0px;
	right:0px;
	height:100px;
	padding-right:50px;
	position:fixed;
	z-index:20;
}

#header li{
	vertical-align:middle;
}

.kard{
	width: 27%;
	height:38vh;
	background: #5bc0be;
	display:inline-block;
	margin: 50px 50px 0px 50px;
}

.kardBottom{
	/*background:rgb(68,117,116);*/
	background-color: #960000;
	color:white;
	height:35%;
	position:relative;
	bottom:0px;
	padding-bottom:2%;
	padding-top:2%;
	top:-25%;
}

.kardRow{
	display:table-row;
	right:0px;
	left:0px;
	width:100%;
}

.kardText{
	margin-top:0px;
	margin-bottom:2%;
	padding-left:4%;
	padding-right:4%;
}

.logoClear{
	font-family: 'Skranji', cursive;
	float:left;
	font-size:48px;
}

.logoClear a:hover{
    color: #efd139;
}

.logoSolid{
	font-family: 'Skranji', cursive;
	float:left;
	font-size:48px;
}

.logoSolid a:hover{
    color: #5d88ea;
}

.mainContent{
	background:#fffbe8;
	text-align:center;
	z-index:1;
	display:flex;
	width:100%;
	height:auto;
	overflow:hidden;
}

.map{
	display:inline-block;
	width:50%;
	/*background-color:#4bb1df;*/
	background-color:#efefef;
	padding-bottom:10px;
	padding-left:10px;
	flex:1;
}

.map h2{
    margin: 0;
    margin-bottom: 5px;
}

#mapFrame{
	height:90%;
	width:90%;
}

.menuContainer{
	display:table;
	background:#fffbe8;
}

#menuMainContent{
	position:relative;
	display:table;
	padding-bottom:50px;
}

.navTitle{
	color:white;
	text-decoration:none;
	list-style-type:none;
	float:right;
	margin-left:20px;
	font-size:48px;
}

.navTitle{
	color:white;
	text-decoration:none;
	list-style-type:none;
	float:right;
	margin-left:10px;
	margin-right:10px;
	font-size:48px;
}

.navTitleMenu{
	background-color:#efd139;
	padding-left:10px;
	padding-right:10px;
	font-size:4vh;
	position:relative;
	margin-bottom:0px;
	padding-bottom:5px;
}

.navTitleMenu a:hover{
	background-color:white;
	color:#efd139;
}

.navTitleMenu:hover{
	background-color:white;
}
.noSelect{
   -moz-user-select: none;
   -khtml-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
   cursor: default;
}

.slide{
	height:100%;
	width:100%;
	display:inline-block;
	margin:0px;
	padding:0px;
	font-size:4vh;
	z-index:2;
}

.sBActive{
	background:#e24226;
}

.sBInactive{
	background-color:#efd139
}

.slideButton{
	border-radius:50%;
	display:inline-block;
	height:1.5vmin;
	width:1.5vmin;
	z-index:5;
}

.slideButtonContainer{
	height:4%;
	position:absolute;
	bottom:2%;
	width:100%;
	text-align:center;
}

.slideContainer{
	 white-space:nowrap;
	 height:100%;
	 width:100%;
	 position:relative;
	 font-size:0px;
	 left:0%;
}

.tabContainer{
	position:absolute;
	height:10vh;
	bottom:0px;
	width:100%;
	display: flex;
	justify-content: flex-end;
	align-items: flex-end;
}

.textBold{
	font-weight:bold;
}

